--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 </head>
 
 <body>
+  <header>
+    header
+  </header>
+  <main>
+    main
+  </main>
+  <footer>
+    footer
+  </footer>
 </body>
 
 </html>
