--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
 </head>
 
 <body>
+
+  <section class="featured-article">
+    <div class="featured-article__image-wrapper">
+      <img class="featured-article__image" src="images/placeholderFallout.webp"
+        alt="Alt text for an image in this article, if I choose to include an image."
+        title="FEATURED placeholder information that will BLOW YOUR MIND!">
+    </div>
+    <figcaption>You won't BELIEVE this ONE NEAT TRICK in this placeholder article!</figcaption>
+
+    <h2 class="featured-article__title article-list__title">The Billion Dollar Secret They Don't Want You To Know</h2>
+
+    <p>] But I must explain to you how all this mistaken idea of reprobating pleasure and extolling pain arose. To do so, I will give you a complete account of the system and expound the teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter extremely painful consequences. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but occasionally circumstances occur in which toil and pain can procure him some great pleasure.
+      <br><br>
+On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. 
+      </p>
+  </section>
   <!-- Grid of News Articles -->
   <section class="article-list">
     <article class="article-list__item article">
