--- a/index.html
+++ b/index.html
@@ -31,121 +31,148 @@ On the other hand, we denounce with righteous indignation and dislike men who ar
     </details>
   </section>
   <!-- Grid of News Articles -->
-  <section class="article-list">
-    <article class="article-list__item article">
-      <div class="article__image-wrapper">
-        <img class="article__image" src="images/placeholderFallout.webp"
-          alt="Alt text for an image in this article, if I choose to include an image."
-          title="Placeholder secrets the ELITE don't want you to know!">
-      </div>
-      <figcaption>You won't BELIEVE this ONE NEAT TRICK in this placeholder article!</figcaption>
+  <section class="section-heading">
+    <h2 class="section-heading__title">AI Slop</h2>
+    <section class="article-list">
+      <article class="article-list__item article">
 
-      <h3 class="article-list__title">DOCTORS HATE THIS PLACEHOLDER ARTICLE TITLE</h3>
+        <h3 class="article-list__title">DOCTORS HATE THIS PLACEHOLDER ARTICLE TITLE</h3>
 
-      <details>
-        <summary>Click to read more!</summary>
-      <p>First, concerning battlefield geometry, Ukrainian officers have begun to adjust their
-        conception of the battlefield. Instead of the close, deep and rear, delineated by the
-        depth of forces from the FLOT, Ukrainian planners now speak of a ‘contested zone’ or ‘grey zone’, which is
-        usually bounded by open ground.
-      </p>
-      </details>
-    </article>
-    <article class="article-list__item article">
-      <div class="article__image-wrapper">
-        <img class="article__image" src="images/placeholderFallout.webp"
-          alt="Alt text for an image in this article, if I choose to include an image."
-          title="Placeholder secrets the ELITE don't want you to know!">
-      </div>
-      <figcaption>You won't BELIEVE this ONE NEAT TRICK in this placeholder article!</figcaption>
+        <details>
+          <summary>Click to read more!</summary>
+          <div class="article__image-wrapper">
+          <img class="article__image" src="images/placeholderFallout.webp"
+            alt="Alt text for an image in this article, if I choose to include an image."
+            title="Placeholder secrets the ELITE don't want you to know!">
+          </div>
+          <figcaption>You won't BELIEVE this ONE NEAT TRICK in this placeholder article!</figcaption>
 
-      <h3 class="article-list__title">DOCTORS HATE THIS PLACEHOLDER ARTICLE TITLE</h3>
+          <p>First, concerning battlefield geometry, Ukrainian officers have begun to adjust their
+          conception of the battlefield. Instead of the close, deep and rear, delineated by the
+          depth of forces from the FLOT, Ukrainian planners now speak of a ‘contested zone’ or ‘grey zone’, which is
+          usually bounded by open ground.
+        </p>
+        </details>
+      </article>
 
-      <details>
-        <summary>Click to read more!</summary>
-      <p>First, concerning battlefield geometry, Ukrainian officers have begun to adjust their
-        conception of the battlefield. Instead of the close, deep and rear, delineated by the
-        depth of forces from the FLOT, Ukrainian planners now speak of a ‘contested zone’ or ‘grey zone’, which is
-        usually bounded by open ground.
-      </p>
-      </details>
-    </article>
-    <article class="article-list__item article">
-      <div class="article__image-wrapper">
-        <img class="article__image" src="images/placeholderFallout.webp"
-          alt="Alt text for an image in this article, if I choose to include an image."
-          title="Placeholder secrets the ELITE don't want you to know!">
-      </div>
-      <figcaption>You won't BELIEVE this ONE NEAT TRICK in this placeholder article!</figcaption>
+        <article class="article-list__item article">
 
-      <h3 class="article-list__title">DOCTORS HATE THIS PLACEHOLDER ARTICLE TITLE</h3>
+        <h3 class="article-list__title">DOCTORS HATE THIS PLACEHOLDER ARTICLE TITLE</h3>
 
-      <details>
-        <summary>Click to read more!</summary>
-      <p>First, concerning battlefield geometry, Ukrainian officers have begun to adjust their
-        conception of the battlefield. Instead of the close, deep and rear, delineated by the
-        depth of forces from the FLOT, Ukrainian planners now speak of a ‘contested zone’ or ‘grey zone’, which is
-        usually bounded by open ground.
-      </p>
-      </details>
-    </article>
-    <article class="article-list__item article">
-      <div class="article__image-wrapper">
-        <img class="article__image" src="images/placeholderFallout.webp"
-          alt="Alt text for an image in this article, if I choose to include an image."
-          title="Placeholder secrets the ELITE don't want you to know!">
-      </div>
-      <figcaption>You won't BELIEVE this ONE NEAT TRICK in this placeholder article!</figcaption>
+        <details>
+          <summary>Click to read more!</summary>
+          <div class="article__image-wrapper">
+          <img class="article__image" src="images/placeholderFallout.webp"
+            alt="Alt text for an image in this article, if I choose to include an image."
+            title="Placeholder secrets the ELITE don't want you to know!">
+          </div>
+          <figcaption>You won't BELIEVE this ONE NEAT TRICK in this placeholder article!</figcaption>
 
-      <h3 class="article-list__title">DOCTORS HATE THIS PLACEHOLDER ARTICLE TITLE</h3>
+          <p>First, concerning battlefield geometry, Ukrainian officers have begun to adjust their
+          conception of the battlefield. Instead of the close, deep and rear, delineated by the
+          depth of forces from the FLOT, Ukrainian planners now speak of a ‘contested zone’ or ‘grey zone’, which is
+          usually bounded by open ground.
+        </p>
+        </details>
+      </article>
 
-      <details>
-        <summary>Click to read more!</summary>
-      <p>First, concerning battlefield geometry, Ukrainian officers have begun to adjust their
-        conception of the battlefield. Instead of the close, deep and rear, delineated by the
-        depth of forces from the FLOT, Ukrainian planners now speak of a ‘contested zone’ or ‘grey zone’, which is
-        usually bounded by open ground.
-      </p>
-      </details>
-    </article>
-    <article class="article-list__item article">
-      <div class="article__image-wrapper">
-        <img class="article__image" src="images/placeholderFallout.webp"
-          alt="Alt text for an image in this article, if I choose to include an image."
-          title="Placeholder secrets the ELITE don't want you to know!">
-      </div>
-      <figcaption>You won't BELIEVE this ONE NEAT TRICK in this placeholder article!</figcaption>
+    </section>
+  </section>
 
-      <h3 class="article-list__title">DOCTORS HATE THIS PLACEHOLDER ARTICLE TITLE</h3>
+    <section class="section-heading">
+    <h2 class="section-heading__title">Second Section</h2>
+    <section class="article-list">
+      <article class="article-list__item article">
 
-      <details>
-        <summary>Click to read more!</summary>
-      <p>First, concerning battlefield geometry, Ukrainian officers have begun to adjust their
-        conception of the battlefield. Instead of the close, deep and rear, delineated by the
-        depth of forces from the FLOT, Ukrainian planners now speak of a ‘contested zone’ or ‘grey zone’, which is
-        usually bounded by open ground.
-      </p>
-      </details>
-    </article>
-    <article class="article-list__item article">
-      <div class="article__image-wrapper">
-        <img class="article__image" src="images/placeholderFallout.webp"
-          alt="Alt text for an image in this article, if I choose to include an image."
-          title="Placeholder secrets the ELITE don't want you to know!">
-      </div>
-      <figcaption>You won't BELIEVE this ONE NEAT TRICK in this placeholder article!</figcaption>
+        <h3 class="article-list__title">DOCTORS HATE THIS PLACEHOLDER ARTICLE TITLE</h3>
 
-      <h3 class="article-list__title">DOCTORS HATE THIS PLACEHOLDER ARTICLE TITLE</h3>
+        <details>
+          <summary>Click to read more!</summary>
+          <div class="article__image-wrapper">
+          <img class="article__image" src="images/placeholderFallout.webp"
+            alt="Alt text for an image in this article, if I choose to include an image."
+            title="Placeholder secrets the ELITE don't want you to know!">
+          </div>
+          <figcaption>You won't BELIEVE this ONE NEAT TRICK in this placeholder article!</figcaption>
 
-      <details>
-        <summary>Click to read more!</summary>
-      <p>First, concerning battlefield geometry, Ukrainian officers have begun to adjust their
-        conception of the battlefield. Instead of the close, deep and rear, delineated by the
-        depth of forces from the FLOT, Ukrainian planners now speak of a ‘contested zone’ or ‘grey zone’, which is
-        usually bounded by open ground.
-      </p>
-      </details>
-    </article>
+          <p>First, concerning battlefield geometry, Ukrainian officers have begun to adjust their
+          conception of the battlefield. Instead of the close, deep and rear, delineated by the
+          depth of forces from the FLOT, Ukrainian planners now speak of a ‘contested zone’ or ‘grey zone’, which is
+          usually bounded by open ground.
+        </p>
+        </details>
+      </article>
+
+        <article class="article-list__item article">
+
+        <h3 class="article-list__title">DOCTORS HATE THIS PLACEHOLDER ARTICLE TITLE</h3>
+
+        <details>
+          <summary>Click to read more!</summary>
+          <div class="article__image-wrapper">
+          <img class="article__image" src="images/placeholderFallout.webp"
+            alt="Alt text for an image in this article, if I choose to include an image."
+            title="Placeholder secrets the ELITE don't want you to know!">
+          </div>
+          <figcaption>You won't BELIEVE this ONE NEAT TRICK in this placeholder article!</figcaption>
+
+          <p>First, concerning battlefield geometry, Ukrainian officers have begun to adjust their
+          conception of the battlefield. Instead of the close, deep and rear, delineated by the
+          depth of forces from the FLOT, Ukrainian planners now speak of a ‘contested zone’ or ‘grey zone’, which is
+          usually bounded by open ground.
+        </p>
+        </details>
+      </article>
+
+    </section>
+  </section>
+
+  <section class="section-heading">
+    <h2 class="section-heading__title">Third Section</h2>
+    <section class="article-list">
+      <article class="article-list__item article">
+
+        <h3 class="article-list__title">DOCTORS HATE THIS PLACEHOLDER ARTICLE TITLE</h3>
+
+        <details>
+          <summary>Click to read more!</summary>
+          <div class="article__image-wrapper">
+          <img class="article__image" src="images/placeholderFallout.webp"
+            alt="Alt text for an image in this article, if I choose to include an image."
+            title="Placeholder secrets the ELITE don't want you to know!">
+          </div>
+          <figcaption>You won't BELIEVE this ONE NEAT TRICK in this placeholder article!</figcaption>
+
+          <p>First, concerning battlefield geometry, Ukrainian officers have begun to adjust their
+          conception of the battlefield. Instead of the close, deep and rear, delineated by the
+          depth of forces from the FLOT, Ukrainian planners now speak of a ‘contested zone’ or ‘grey zone’, which is
+          usually bounded by open ground.
+        </p>
+        </details>
+      </article>
+
+        <article class="article-list__item article">
+
+        <h3 class="article-list__title">DOCTORS HATE THIS PLACEHOLDER ARTICLE TITLE</h3>
+
+        <details>
+          <summary>Click to read more!</summary>
+          <div class="article__image-wrapper">
+          <img class="article__image" src="images/placeholderFallout.webp"
+            alt="Alt text for an image in this article, if I choose to include an image."
+            title="Placeholder secrets the ELITE don't want you to know!">
+          </div>
+          <figcaption>You won't BELIEVE this ONE NEAT TRICK in this placeholder article!</figcaption>
+
+          <p>First, concerning battlefield geometry, Ukrainian officers have begun to adjust their
+          conception of the battlefield. Instead of the close, deep and rear, delineated by the
+          depth of forces from the FLOT, Ukrainian planners now speak of a ‘contested zone’ or ‘grey zone’, which is
+          usually bounded by open ground.
+        </p>
+        </details>
+      </article>
+
+    </section>
   </section>
 </body>
 
