refactor(styles): rename _body.css to _article.css;

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/base.css" />
     <link rel="stylesheet" href="styles/components/_header.css" />
     <link rel="stylesheet" href="styles/components/_footer.css" />
-    <link rel="stylesheet" href="styles/components/_body.css" />
+    <link rel="stylesheet" href="styles/components/_article.css" />
 
     <title>Index</title>
   </head>
