--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/components/_header.css" />
     <link rel="stylesheet" href="styles/components/_footer.css" />
     <link rel="stylesheet" href="styles/components/_article.css" />
+    <link rel="stylesheet" href="styles/components/_template.css" />
 
     <title>Index</title>
   </head>
@@ -41,45 +42,56 @@
       </div>
     </header>
     <main>
-      <article class="article article--featured">
-        <div class="article__image-wrapper">
-          <img
-            class="article__image"
-            src="images/placeholderFallout.webp"
-            alt="Alt text for an image in this article, if I choose to include an image."
-            title="FEATURED placeholder information that will BLOW YOUR MIND!"
-          />
-        </div>
-
-        <h2 class="article__title article-list__title">
-          Featured Article Title
-        </h2>
-
-        <details>
-          <summary>Read more</summary>
-          <p>Article paragraph</p>
-        </details>
-      </article>
-      <article class="article article--small">
-        <h3 class="article__title">Article Title</h3>
-
-        <details>
-          <summary>Read more</summary>
-          <div class="article__image-wrapper">
+      <div class="article-container">
+        <section class="featured-article">
+          <div class="featured-article__image-wrapper">
             <img
-              class="article__image"
+              class="featured-article__image"
               src="images/placeholderFallout.webp"
               alt="Alt text for an image in this article, if I choose to include an image."
-              title="Placeholder secrets the ELITE don't want you to know!"
+              title="FEATURED placeholder information that will BLOW YOUR MIND!"
             />
           </div>
 
-          <p>Article Paragraph</p>
-          <div class="article__image-wrapper">
-            <img class="article__image" src="images/articles/ai_slop_ui.webp" />
+          <h2 class="featured-article__title article-list__title">
+            Featured Article Title
+          </h2>
+
+          <details>
+            <summary>Read more</summary>
+            <p>Article paragraph</p>
+          </details>
+        </section>
+        <!-- Grid of News Articles -->
+        <section class="section-heading">
+          <h2 class="section-heading__title">Section Header</h2>
+          <div class="article-list">
+            <article class="article-list__item article">
+              <h3 class="article-list__title">Article Title</h3>
+
+              <details>
+                <summary>Read more</summary>
+                <div class="article__image-wrapper">
+                  <img
+                    class="article__image"
+                    src="images/placeholderFallout.webp"
+                    alt="Alt text for an image in this article, if I choose to include an image."
+                    title="Placeholder secrets the ELITE don't want you to know!"
+                  />
+                </div>
+
+                <p>Article Paragraph</p>
+                <div class="article__image-wrapper">
+                  <img
+                    class="article__image"
+                    src="images/articles/ai_slop_ui.webp"
+                  />
+                </div>
+              </details>
+            </article>
           </div>
-        </details>
-      </article>
+        </section>
+      </div>
     </main>
     <footer class="footer">
       <div class="footer-inner">
