--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/components/_footer.css" />
     <link rel="stylesheet" href="styles/components/_article.css" />
     <link rel="stylesheet" href="styles/components/_template.css" />
+    <link rel="stylesheet" href="styles/components/_classified.css" />
 
     <title>Index</title>
   </head>
@@ -41,103 +42,176 @@
         </nav>
       </div>
     </header>
-    <main>
-      <div class="article-container">
-        <article class="article article--featured">
-          <div class="article__image-wrapper">
+    <main class="main--two-column">
+      <div>
+        <div class="mx-auto classified classified--media-only">
+          <figure class="classified__media">
             <img
-              class="article__image"
-              src="images/placeholderFallout.webp"
-              alt="Alt text for an image in this article, if I choose to include an image."
-              title="FEATURED placeholder information that will BLOW YOUR MIND!"
+              src="https://placehold.co/600x400"
+              alt="Product"
+              class="classified__image"
             />
+          </figure>
+          <div class="classified__content">
+            <p class="classified__title">Premium Services</p>
+            <p class="classified__description">
+              Unlock full access to our suite of professional tools designed for
+              your growth.
+            </p>
+            <a href="#" class="classified__cta">Upgrade Now</a>
           </div>
+        </div>
+        <div class="article-container">
+          <article class="article article--featured">
+            <div class="article__image-wrapper">
+              <img
+                class="article__image"
+                src="images/placeholderFallout.webp"
+                alt="Alt text for an image in this article, if I choose to include an image."
+                title="FEATURED placeholder information that will BLOW YOUR MIND!"
+              />
+            </div>
 
-          <h2 class="article__title article-list__title">
-            Featured Article Title
-          </h2>
+            <h2 class="article__title article-list__title">
+              Featured Article Title
+            </h2>
 
-          <details>
-            <summary>Read more</summary>
-            <p>Article paragraph</p>
-          </details>
-        </article>
-        <!-- Grid of News Articles -->
-        <section class="section-heading">
-          <h2 class="section-heading__title">Section Header</h2>
-          <div class="article-list">
-            <article class="article article--small">
-              <h3 class="article__title">Article Title</h3>
+            <details>
+              <summary>Read more</summary>
+              <p>Article paragraph</p>
+            </details>
+          </article>
+          <!-- Grid of News Articles -->
+          <section class="section-heading">
+            <h2 class="section-heading__title">Section Header</h2>
+            <div class="article-list">
+              <article class="article article--small">
+                <h3 class="article__title">Article Title</h3>
 
-              <details>
-                <summary>Read more</summary>
-                <div class="article__image-wrapper">
-                  <img
-                    class="article__image"
-                    src="images/placeholderFallout.webp"
-                    alt="Alt text for an image in this article, if I choose to include an image."
-                    title="Placeholder secrets the ELITE don't want you to know!"
-                  />
-                </div>
+                <details>
+                  <summary>Read more</summary>
+                  <div class="article__image-wrapper">
+                    <img
+                      class="article__image"
+                      src="images/placeholderFallout.webp"
+                      alt="Alt text for an image in this article, if I choose to include an image."
+                      title="Placeholder secrets the ELITE don't want you to know!"
+                    />
+                  </div>
 
-                <p>Article Paragraph</p>
-                <div class="article__image-wrapper">
-                  <img
-                    class="article__image"
-                    src="images/articles/ai_slop_ui.webp"
-                  />
-                </div>
-              </details>
-            </article>
-            <article class="article article--small">
-              <h3 class="article__title">Article Title</h3>
+                  <p>Article Paragraph</p>
+                  <div class="article__image-wrapper">
+                    <img
+                      class="article__image"
+                      src="images/articles/ai_slop_ui.webp"
+                    />
+                  </div>
+                </details>
+              </article>
+              <article class="article article--small">
+                <h3 class="article__title">Article Title</h3>
 
-              <details>
-                <summary>Read more</summary>
-                <div class="article__image-wrapper">
-                  <img
-                    class="article__image"
-                    src="images/placeholderFallout.webp"
-                    alt="Alt text for an image in this article, if I choose to include an image."
-                    title="Placeholder secrets the ELITE don't want you to know!"
-                  />
-                </div>
+                <details>
+                  <summary>Read more</summary>
+                  <div class="article__image-wrapper">
+                    <img
+                      class="article__image"
+                      src="images/placeholderFallout.webp"
+                      alt="Alt text for an image in this article, if I choose to include an image."
+                      title="Placeholder secrets the ELITE don't want you to know!"
+                    />
+                  </div>
 
-                <p>Article Paragraph</p>
-                <div class="article__image-wrapper">
-                  <img
-                    class="article__image"
-                    src="images/articles/ai_slop_ui.webp"
-                  />
-                </div>
-              </details>
-            </article>
-            <article class="article article--small">
-              <h3 class="article__title">Article Title</h3>
+                  <p>Article Paragraph</p>
+                  <div class="article__image-wrapper">
+                    <img
+                      class="article__image"
+                      src="images/articles/ai_slop_ui.webp"
+                    />
+                  </div>
+                </details>
+              </article>
+              <article class="article article--small">
+                <h3 class="article__title">Article Title</h3>
 
-              <details>
-                <summary>Read more</summary>
-                <div class="article__image-wrapper">
-                  <img
-                    class="article__image"
-                    src="images/placeholderFallout.webp"
-                    alt="Alt text for an image in this article, if I choose to include an image."
-                    title="Placeholder secrets the ELITE don't want you to know!"
-                  />
-                </div>
+                <details>
+                  <summary>Read more</summary>
+                  <div class="article__image-wrapper">
+                    <img
+                      class="article__image"
+                      src="images/placeholderFallout.webp"
+                      alt="Alt text for an image in this article, if I choose to include an image."
+                      title="Placeholder secrets the ELITE don't want you to know!"
+                    />
+                  </div>
 
-                <p>Article Paragraph</p>
-                <div class="article__image-wrapper">
-                  <img
-                    class="article__image"
-                    src="images/articles/ai_slop_ui.webp"
-                  />
-                </div>
-              </details>
-            </article>
+                  <p>Article Paragraph</p>
+                  <div class="article__image-wrapper">
+                    <img
+                      class="article__image"
+                      src="images/articles/ai_slop_ui.webp"
+                    />
+                  </div>
+                </details>
+              </article>
+            </div>
+          </section>
+        </div>
+        <div class="mx-auto classified">
+          <figure class="classified__media">
+            <img
+              src="https://placehold.co/600x400"
+              alt="Product"
+              class="classified__image"
+            />
+          </figure>
+          <div class="classified__content">
+            <p class="classified__title">Premium Services</p>
+            <p class="classified__description">
+              Unlock full access to our suite of professional tools designed for
+              your growth.
+            </p>
+            <a href="#" class="classified__cta">Upgrade Now</a>
           </div>
-        </section>
+        </div>
       </div>
+      <aside>
+        <div class="classified classified--vertical">
+          <figure class="classified__media">
+            <img
+              src="https://placehold.co/400x300"
+              alt="Product"
+              class="classified__image"
+            />
+          </figure>
+          <div class="classified__content">
+            <p class="classified__title">New Arrivals</p>
+            <p class="classified__description">
+              The winter collection has arrived. Explore fresh styles and cozy
+              fabrics.
+            </p>
+            <a href="#" class="classified__cta">Shop Collection</a>
+          </div>
+        </div>
+
+        <div class="classified classified--vertical classified--media-only">
+          <figure class="classified__media">
+            <img
+              src="https://placehold.co/400x300"
+              alt="Product"
+              class="classified__image"
+            />
+          </figure>
+          <div class="classified__content">
+            <p class="classified__title">New Arrivals</p>
+            <p class="classified__description">
+              The winter collection has arrived. Explore fresh styles and cozy
+              fabrics.
+            </p>
+            <a href="#" class="classified__cta">Shop Collection</a>
+          </div>
+        </div>
+      </aside>
     </main>
     <footer class="footer">
       <div class="footer-inner">
