chore(classifieds): replace placeholders with stupid images;

--- a/index.html
+++ b/index.html
@@ -102,19 +102,11 @@
             <div class="mx-auto classified classified--media-only">
               <figure class="classified__media">
                 <img
-                  src="https://placehold.co/600x400"
+                  src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.zabka.pl%2Fwp-content%2Fuploads%2F2024%2F11%2F06084120%2Fstreet-food-hero-desktop-november.jpg&f=1&nofb=1&ipt=ca22ccb2c27ecd5324443cdb998dfadbc5ec42cb8bd2543010635a0664dc675b"
                   alt="Product"
                   class="classified__image"
                 />
               </figure>
-              <div class="classified__content">
-                <p class="classified__title">Premium Services</p>
-                <p class="classified__description">
-                  Unlock full access to our suite of professional tools designed
-                  for your growth.
-                </p>
-                <a href="#" class="classified__cta">Upgrade Now</a>
-              </div>
             </div>
             <div class="article-container">
               <article class="article article--featured">
@@ -214,18 +206,20 @@
             <div class="mx-auto classified">
               <figure class="classified__media">
                 <img
-                  src="https://placehold.co/600x400"
+                  src="https://media1.tenor.com/m/h3T2PlNUym4AAAAC/absoluteslop.gif"
                   alt="Product"
                   class="classified__image"
                 />
               </figure>
               <div class="classified__content">
-                <p class="classified__title">Premium Services</p>
+                <p class="classified__title">Just Garbage</p>
                 <p class="classified__description">
-                  Unlock full access to our suite of professional tools designed
-                  for your growth.
+                  Looking to consume? You can stop thinking now. Purchase this
+                  product.
                 </p>
-                <a href="#" class="classified__cta">Upgrade Now</a>
+                <a href="#" class="classified__cta"
+                  >Where's your credit card?</a
+                >
               </div>
             </div>
           </div>
@@ -233,37 +227,29 @@
             <div class="classified classified--vertical">
               <figure class="classified__media">
                 <img
-                  src="https://placehold.co/400x300"
+                  src="https://media1.tenor.com/m/dkWNqydxCBgAAAAd/pig-slap.gif"
                   alt="Product"
                   class="classified__image"
                 />
               </figure>
               <div class="classified__content">
-                <p class="classified__title">New Arrivals</p>
+                <p class="classified__title">Bovine Banking</p>
                 <p class="classified__description">
-                  The winter collection has arrived. Explore fresh styles and
-                  cozy fabrics.
+                  Slap the markets like they owe you money with our
+                  commission-free trade accounts.
                 </p>
-                <a href="#" class="classified__cta">Shop Collection</a>
+                <a href="#" class="classified__cta">Open account today!</a>
               </div>
             </div>
 
             <div class="classified classified--vertical classified--media-only">
               <figure class="classified__media">
                 <img
-                  src="https://placehold.co/400x300"
+                  src="https://media.tenor.com/qOvPJl0RYfgAAAA1/squidward-tentacles-knocking-on-door.webp"
                   alt="Product"
                   class="classified__image"
                 />
               </figure>
-              <div class="classified__content">
-                <p class="classified__title">New Arrivals</p>
-                <p class="classified__description">
-                  The winter collection has arrived. Explore fresh styles and
-                  cozy fabrics.
-                </p>
-                <a href="#" class="classified__cta">Shop Collection</a>
-              </div>
             </div>
           </aside>
         </div>
