--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/components/_classified.css" />
     <link rel="stylesheet" href="styles/components/_popupAds.css" />
     <link rel="stylesheet" href="styles/components/_tickertape.css" />
+    <link rel="stylesheet" href="styles/components/_fsDetails.css" />
 
     <script type="module" src="scripts/popupAds/draggable.js" defer></script>
     <script type="module" src="scripts/popupAds/schizoToggle.js" defer></script>
@@ -123,8 +124,9 @@
                   Featured Article Title
                 </h2>
 
-                <details>
+                <details class="details-fs">
                   <summary>Read more</summary>
+                  <p class="details-fs__title">Featured Article Title</p>
                   <p>Article paragraph</p>
                 </details>
               </article>
@@ -134,7 +136,7 @@
                 <div class="article-list">
                   <article class="article article--small">
                     <h3 class="article__title">Article Title</h3>
-                    <details>
+                    <details class="details-fs">
                       <summary>Read more</summary>
                       <div class="article__image-wrapper">
                         <img
@@ -157,7 +159,7 @@
                   <article class="article article--small">
                     <h3 class="article__title">Article Title</h3>
 
-                    <details>
+                    <details class="details-fs">
                       <summary>Read more</summary>
                       <div class="article__image-wrapper">
                         <img
@@ -180,7 +182,7 @@
                   <article class="article article--small">
                     <h3 class="article__title">Article Title</h3>
 
-                    <details>
+                    <details class="details-fs">
                       <summary>Read more</summary>
                       <div class="article__image-wrapper">
                         <img
