--- a/index.html
+++ b/index.html
@@ -135,9 +135,12 @@
                 <h2 class="section-heading__title">Section Header</h2>
                 <div class="article-list">
                   <article class="article article--small">
+                    <figure class="article__grabber">
+                      <img src="https://placehold.co/400x400" />
+                    </figure>
                     <h3 class="article__title">Article Title</h3>
                     <details class="details-fs">
-                      <summary>Read more</summary>
+                      <summary></summary>
                       <div class="article__image-wrapper">
                         <img
                           class="article__image"
@@ -157,10 +160,12 @@
                     </details>
                   </article>
                   <article class="article article--small">
+                    <figure class="article__grabber">
+                      <img src="https://placehold.co/400x400" />
+                    </figure>
                     <h3 class="article__title">Article Title</h3>
-
                     <details class="details-fs">
-                      <summary>Read more</summary>
+                      <summary></summary>
                       <div class="article__image-wrapper">
                         <img
                           class="article__image"
@@ -180,10 +185,12 @@
                     </details>
                   </article>
                   <article class="article article--small">
+                    <figure class="article__grabber">
+                      <img src="https://placehold.co/400x400" />
+                    </figure>
                     <h3 class="article__title">Article Title</h3>
-
                     <details class="details-fs">
-                      <summary>Read more</summary>
+                      <summary></summary>
                       <div class="article__image-wrapper">
                         <img
                           class="article__image"
