--- a/index.html
+++ b/index.html
@@ -109,30 +109,30 @@
                 />
               </figure>
             </div>
-            <div class="article-container">
-              <article class="article article--featured">
-                <div class="article__image-wrapper">
-                  <img
-                    class="article__image"
-                    src="images/placeholderFallout.webp"
-                    alt="Alt text for an image in this article, if I choose to include an image."
-                    title="FEATURED placeholder information that will BLOW YOUR MIND!"
-                  />
-                </div>
+            <section class="article-group">
+              <h2 class="article-group__heading">Today's Top Stories</h2>
+              <div class="article-container">
+                <article class="article article--featured">
+                  <div class="article__image-wrapper">
+                    <img
+                      class="article__image"
+                      src="images/placeholderFallout.webp"
+                      alt="Alt text for an image in this article, if I choose to include an image."
+                      title="FEATURED placeholder information that will BLOW YOUR MIND!"
+                    />
+                  </div>
 
-                <h2 class="article__title article-list__title">
-                  Featured Article Title
-                </h2>
+                  <h3 class="article__title article-list__title">
+                    Featured Article Title
+                  </h3>
 
-                <details class="details-fs">
-                  <summary>Read more</summary>
-                  <p class="details-fs__title">Featured Article Title</p>
-                  <p>Article paragraph</p>
-                </details>
-              </article>
-              <!-- Grid of News Articles -->
-              <section class="section-heading">
-                <h2 class="section-heading__title">Section Header</h2>
+                  <details class="details-fs">
+                    <summary>Read more</summary>
+                    <p class="details-fs__title">Featured Article Title</p>
+                    <p>Article paragraph</p>
+                  </details>
+                </article>
+                <!-- Grid of News Articles -->
                 <div class="article-list">
                   <article class="article article--small">
                     <figure class="article__grabber">
@@ -210,8 +210,8 @@
                     </details>
                   </article>
                 </div>
-              </section>
-            </div>
+              </div>
+            </section>
             <div class="mx-auto classified">
               <figure class="classified__media">
                 <img
