chore(article): replace placeholders with cats exploding;

--- a/index.html
+++ b/index.html
@@ -136,7 +136,9 @@
                 <div class="article-list">
                   <article class="article article--small">
                     <figure class="article__grabber">
-                      <img src="https://placehold.co/400x400" />
+                      <img
+                        src="https://i.pinimg.com/736x/0e/ee/9b/0eee9bfaf9217cacbc7aa387b6f07bb9.jpg"
+                      />
                     </figure>
                     <h3 class="article__title">Article Title</h3>
                     <details class="details-fs">
@@ -161,7 +163,9 @@
                   </article>
                   <article class="article article--small">
                     <figure class="article__grabber">
-                      <img src="https://placehold.co/400x400" />
+                      <img
+                        src="https://i.pinimg.com/474x/d5/1f/ae/d51faead2b6840bbe5ca85d7acd429b5.jpg"
+                      />
                     </figure>
                     <h3 class="article__title">Article Title</h3>
                     <details class="details-fs">
@@ -186,7 +190,9 @@
                   </article>
                   <article class="article article--small">
                     <figure class="article__grabber">
-                      <img src="https://placehold.co/400x400" />
+                      <img
+                        src="https://i.pinimg.com/474x/cb/66/ff/cb66ff04429c01fadbd1d81bb7a8b5cb.jpg"
+                      />
                     </figure>
                     <h3 class="article__title">Article Title</h3>
                     <details class="details-fs">
