chore(fullscreen-details): make summary content not clickable;

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                   </h3>
 
                   <details class="details-fs">
-                    <summary>Read more</summary>
+                    <summary><div>Read more</div></summary>
                     <p class="details-fs__title">Featured Article Title</p>
                     <p>Article paragraph</p>
                   </details>
