--- a/index.html
+++ b/index.html
@@ -93,11 +93,12 @@
         <iframe
           width="560"
           height="315"
-          src="https://www.youtube.com/embed/267hJgyOh7s?autoplay=1&mute=1"
+          src="https://www.youtube.com/embed/267hJgyOh7s?playlist=267hJgyOh7s&autoplay=1&mute=1&html5=1&controls=0&loop=1&modestbranding=1&rel=0"
           title="YouTube video player"
           frameborder="0"
           allow="autoplay; encrypted-media"
-          allowfullscreen>
+          allowfullscreen
+        >
         </iframe>
       </div>
       <div class="topTicker-container">
