chore: inject more slop advertisements;

--- a/index.html
+++ b/index.html
@@ -1065,6 +1065,16 @@
                       </div>
                     </details>
                   </article>
+
+                  <div class="mx-auto classified classified--media-only">
+                    <figure class="classified__media">
+                      <img
+                        src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.zabka.pl%2Fwp-content%2Fuploads%2F2024%2F11%2F06084120%2Fstreet-food-hero-desktop-november.jpg&f=1&nofb=1&ipt=ca22ccb2c27ecd5324443cdb998dfadbc5ec42cb8bd2543010635a0664dc675b"
+                        alt="Product"
+                        class="classified__image"
+                      />
+                    </figure>
+                  </div>
                 </div>
               </div>
             </section>
@@ -1225,6 +1235,24 @@
                       </div>
                     </details>
                   </article>
+                  <div class="classified classified--media-only">
+                    <figure class="classified__media">
+                      <img
+                        src="https://media1.tenor.com/m/yCNQyjnZjaEAAAAd/tgif-thank-gnome-its-friday.gif"
+                        alt="Product"
+                        class="classified__image"
+                      />
+                    </figure>
+                  </div>
+                  <div class="classified classified--media-only">
+                    <figure class="classified__media">
+                      <img
+                        src="https://media1.tenor.com/m/EVWnALUx8vIAAAAd/grubhub-commercial.gif"
+                        alt="Product"
+                        class="classified__image"
+                      />
+                    </figure>
+                  </div>
                 </div>
               </div>
             </section>
@@ -1247,11 +1275,44 @@
                 <a href="#" class="classified__cta">Open account today!</a>
               </div>
             </div>
-
             <div class="classified classified--vertical classified--media-only">
               <figure class="classified__media">
                 <img
                   src="https://media.tenor.com/qOvPJl0RYfgAAAA1/squidward-tentacles-knocking-on-door.webp"
+                  alt="Product"
+                  class="classified__image"
+                />
+              </figure>
+            </div>
+            <div class="classified classified--vertical classified--media-only">
+              <figure class="classified__media">
+                <img
+                  src="https://media1.tenor.com/m/wvXUGY98sdsAAAAd/snacks-popcorners.gif"
+                  alt="Product"
+                  class="classified__image"
+                />
+              </figure>
+            </div>
+            <div class="classified classified--vertical">
+              <figure class="classified__media">
+                <img
+                  src="https://media1.tenor.com/m/k3fIwVDGC8wAAAAC/pinoy-ads-discount.gif"
+                  alt="Product"
+                  class="classified__image"
+                />
+              </figure>
+              <div class="classified__content">
+                <p class="classified__title">Pinoy Phoning</p>
+                <p class="classified__description">
+                  Call internationally for cents on the dollar.
+                </p>
+                <a href="#" class="classified__cta">Purchase</a>
+              </div>
+            </div>
+            <div class="classified classified--vertical classified--media-only">
+              <figure class="classified__media">
+                <img
+                  src="https://media1.tenor.com/m/Z50Lj31JIaQAAAAC/fruit-gushers-commercial.gif"
                   alt="Product"
                   class="classified__image"
                 />
