chore(nav): anchors jump to sections; prank on request coverup;

--- a/index.html
+++ b/index.html
@@ -66,18 +66,16 @@
             <div class="nav-bar__track">
               <ul class="nav-bar__list">
                 <li class="nav-bar__item">
-                  <a href="#" class="nav-bar__link">Foreign Affairs</a>
+                  <a href="#sec-today" class="nav-bar__link">Today</a>
                 </li>
                 <li class="nav-bar__item">
-                  <a href="#" class="nav-bar__link">Economy</a>
+                  <a href="#sec-pawel" class="nav-bar__link">Pawel's Corner</a>
                 </li>
-
                 <li class="nav-bar__item">
-                  <a href="#" class="nav-bar__link">Sports</a>
+                  <a href="#sec-finance" class="nav-bar__link">Finance</a>
                 </li>
-
                 <li class="nav-bar__item">
-                  <a href="#" class="nav-bar__link"
+                  <a href="https://pranx.com/fake-virus/" class="nav-bar__link"
                     ><strong>Request Coverup</strong></a
                   >
                 </li>
@@ -129,7 +127,9 @@
               </figure>
             </div>
             <section class="article-group">
-              <h2 class="article-group__heading">Today's Top Stories</h2>
+              <h2 id="sec-today" class="article-group__heading">
+                Today's Top Stories
+              </h2>
               <div class="article-container">
                 <article class="article article--featured">
                   <div class="article__image-wrapper">
@@ -729,7 +729,9 @@
               </div>
             </div>
             <section class="article-group">
-              <h2 class="article-group__heading">Pawel's Corner</h2>
+              <h2 id="sec-pawel" class="article-group__heading">
+                Pawel's Corner
+              </h2>
               <div class="article-container">
                 <article class="article article--featured">
                   <div class="article__image-wrapper">
@@ -955,7 +957,7 @@
               </figure>
             </div>
             <section class="article-group">
-              <h2 class="article-group__heading">Finance</h2>
+              <h2 id="sec-finance" class="article-group__heading">Finance</h2>
               <div class="article-container">
                 <article class="article article--featured">
                   <div class="article__image-wrapper">
