chore: Testing tailwind to ensure it works

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <script type="module" src="scripts/popupAds/draggable.js" defer></script>
     <script type="module" src="scripts/popupAds/schizoToggle.js" defer></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 
     <title>Index</title>
   </head>
