--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/base.css" />
+    <link rel="stylesheet" href="styles/base.scss" />
     <link rel="stylesheet" href="styles/components/_header.css" />
     <link rel="stylesheet" href="styles/components/_footer.css" />
     <link rel="stylesheet" href="styles/components/_article.css" />
