feat: added some tailwind grid layouts and trimmed some code

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="styles/components/_article.css" />
     <link rel="stylesheet" href="styles/components/_template.css" />
     <link rel="stylesheet" href="styles/components/_classified.css" />
-    <link rel="stylesheet" href="styles/components/_popupAds.css" />
-    <link rel="stylesheet" href="styles/components/_tickertape.css" />
     <link rel="stylesheet" href="styles/components/_fsDetails.css" />
     <link rel="stylesheet" href="styles/components/_timeCube.css" />
 
@@ -26,43 +24,7 @@
       <div class="header__inner">
         <a class="header__cta" href="#"><span>Subscribe</span></a>
         <div class="nav-bar">
-          <p class="nav-bar__title">
-            <svg
-              height="50"
-              viewBox="0 0 400 75"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <g fill="currentColor">
-                <!-- Logotype: PURE FARCE -->
-                <text
-                  x="0"
-                  y="52"
-                  font-family="Georgia, 'Times New Roman', serif"
-                  font-size="52"
-                  font-weight="900"
-                  letter-spacing="-1.5"
-                >
-                  PURE FARCE
-                </text>
-
-                <!-- Logotype: NEWS -->
-                <text
-                  x="322"
-                  y="50"
-                  font-family="Arial, Helvetica, sans-serif"
-                  font-size="18"
-                  font-weight="300"
-                  letter-spacing="6"
-                >
-                  NEWS
-                </text>
-
-                <!-- Traditional Newspaper Rules -->
-                <rect x="2" y="62" width="398" height="2.5" />
-                <rect x="2" y="68" width="398" height="0.75" />
-              </g>
-            </svg>
-          </p>
+          <p class="nav-bar__title">Profile Page</p>
           <nav class="nav-bar__topics">
             <div class="nav-bar__track">
               <ul class="nav-bar__list">
@@ -76,7 +38,7 @@
                   <a href="#sec-finance" class="nav-bar__link">Finance</a>
                 </li>
                 <li class="nav-bar__item">
-                  <a href="https://pranx.com/fake-virus/" class="nav-bar__link"
+                  <a href="#" class="nav-bar__link"
                     ><strong>Request Coverup</strong></a
                   >
                 </li>
@@ -87,47 +49,10 @@
       </div>
     </header>
     <div>
-      <div id="popupOneBox" class="dragBox" data-default-vh="40">
-        <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
-        <button class="exit-btn stopSchizo-btn">✕</button>
-        <div id="popupOneHeader" class="dragBoxHeader">Click here to move</div>
-        <p class="blinkText">YOU WON'T BELIEVE YOUR EYES</p>
-        <iframe
-          width="560"
-          height="315"
-          src="https://www.youtube.com/embed/267hJgyOh7s?playlist=267hJgyOh7s&autoplay=1&mute=1&html5=1&controls=0&loop=1&modestbranding=1&rel=0"
-          title="YouTube video player"
-          frameborder="0"
-          allow="autoplay; encrypted-media"
-          allowfullscreen
-        >
-        </iframe>
-      </div>
-      <div class="topTicker-container">
-        <div class="topTicker-content">
-          <p>
-            Breaking news - Canada remembers it exists! Breaking news - Canada
-            remembers it exists! Breaking news - Canada remembers it exists!
-          </p>
-          <p>
-            Breaking news - Canada remembers it exists! Breaking news - Canada
-            remembers it exists! Breaking news - Canada remembers it exists!
-          </p>
-        </div>
-      </div>
       <main>
         <div class="main__inner main--two-column">
           <div class="main__content">
-            <div class="mx-auto classified classified--media-only">
-              <figure class="classified__media">
-                <img
-                  src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.zabka.pl%2Fwp-content%2Fuploads%2F2024%2F11%2F06084120%2Fstreet-food-hero-desktop-november.jpg&f=1&nofb=1&ipt=ca22ccb2c27ecd5324443cdb998dfadbc5ec42cb8bd2543010635a0664dc675b"
-                  alt="Product"
-                  class="classified__image"
-                />
-              </figure>
-            </div>
-            <section class="article-group">
+            <section class="grid grid-cols-1 gap-3">
               <h2 id="sec-today" class="article-group__heading">
                 Today's Top Stories
               </h2>
@@ -706,7 +631,7 @@
                 </div>
               </div>
             </section>
-            <div class="mx-auto classified">
+            <!-- <div class="mx-auto classified">
               <figure class="classified__media">
                 <img
                   src="https://media1.tenor.com/m/h3T2PlNUym4AAAAC/absoluteslop.gif"
@@ -724,7 +649,7 @@
                   >Where's your credit card?</a
                 >
               </div>
-            </div>
+            </div> -->
             <section class="article-group">
               <h2 id="sec-pawel" class="article-group__heading">
                 Pawel's Corner
@@ -915,12 +840,12 @@
 
                         <p class="lead-text">Hytale seems like a fun game</p>
 
-                        <div class="article__image-wrapper">
+                        <!-- <div class="article__image-wrapper">
                           <img
                             class="article__image"
                             src="https://media1.tenor.com/m/p1_jfWV8qIMAAAAd/hytale.gif"
                           />
-                        </div>
+                        </div> -->
 
                         <p>
                           I didn't play it or anything, I watched a video about
@@ -932,7 +857,7 @@
                     </details>
                   </article>
 
-                  <div class="mx-auto classified classified--media-only">
+                  <!-- <div class="mx-auto classified classified--media-only">
                     <figure class="classified__media">
                       <img
                         src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.zabka.pl%2Fwp-content%2Fuploads%2F2024%2F11%2F06084120%2Fstreet-food-hero-desktop-november.jpg&f=1&nofb=1&ipt=ca22ccb2c27ecd5324443cdb998dfadbc5ec42cb8bd2543010635a0664dc675b"
@@ -940,11 +865,11 @@
                         class="classified__image"
                       />
                     </figure>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </section>
-            <div class="mx-auto classified classified--media-only">
+            <!-- <div class="mx-auto classified classified--media-only">
               <figure class="classified__media">
                 <img
                   src="https://media1.tenor.com/m/Z50Lj31JIaQAAAAC/fruit-gushers-commercial.gif"
@@ -952,7 +877,7 @@
                   class="classified__image"
                 />
               </figure>
-            </div>
+            </div> -->
             <section class="article-group">
               <h2 id="sec-finance" class="article-group__heading">Finance</h2>
               <div class="article-container">
@@ -1110,7 +1035,7 @@
                       </div>
                     </details>
                   </article>
-                  <div class="classified classified--media-only">
+                  <!-- <div class="classified classified--media-only">
                     <figure class="classified__media">
                       <img
                         src="https://media1.tenor.com/m/yCNQyjnZjaEAAAAd/tgif-thank-gnome-its-friday.gif"
@@ -1126,13 +1051,13 @@
                         alt="Product"
                         class="classified__image"
                       />
-                    </figure>
-                  </div>
+                    </figure> 
+                  </div> -->
                 </div>
               </div>
             </section>
           </div>
-          <aside class="aside--extras">
+          <!-- <aside class="aside--extras">
             <div class="classified classified--vertical">
               <figure class="classified__media">
                 <img
@@ -1184,7 +1109,7 @@
                 <a href="#" class="classified__cta">Purchase</a>
               </div>
             </div>
-          </aside>
+          </aside> -->
         </div>
       </main>
     </div>
