feat: added some sass stylings and starting to populate articles

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <div class="flex flex-col">
-        <div class="flex flex-row justify-center">
+        <div class="flex flex-col justify-center">
           <p class="nav-bar__title">Profile Page</p>
           <nav class="nav-bar__topics">
             <div class="nav-bar__track">
@@ -69,8 +69,8 @@
                     <p class="title">About Myself</p>
                     <div class="byline">By <span>Poul Isbister</span></div>
                     <p>
-                      Need to place things about myself here. I hate talking
-                      about myself.
+                      I enjoy learning about anything that I find interesting. I
+                      also enjoy litsning to music.
                     </p>
                   </div>
                 </details>
@@ -85,9 +85,7 @@
                       alt="Cat photo"
                     />
                   </figure>
-                  <h3 class="article__title article-list__title">
-                    Uncle Ted's Wisdom
-                  </h3>
+                  <h3 class="article__title article-list__title"></h3>
                   <details class="details-fs">
                     <summary></summary>
                     <div class="article__prose">
