chore: updated the header for the 2nd group of articles

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           </section>
           <section class="grid grid-row-3 gap-3">
             <h2 id="sec-pawel" class="article-group__heading">
-              Pawel's Corner
+              Additonal Profile Info
             </h2>
             <div class="article-container">
               <article class="article article--featured p-6 shadow-sm">
