chore: updated links in header to reflect the headers of the articles

--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
             <div class="nav-bar__track">
               <ul class="nav-bar__list">
                 <li class="nav-bar__item">
-                  <a href="#sec-today" class="nav-bar__link">Today</a>
+                  <a href="#sec-today" class="nav-bar__link"
+                    >Profile Highlights</a
+                  >
                 </li>
                 <li class="nav-bar__item">
-                  <a href="#sec-pawel" class="nav-bar__link">Pawel's Corner</a>
+                  <a href="#sec-pawel" class="nav-bar__link"
+                    >Additonal profile info</a
+                  >
                 </li>
               </ul>
             </div>
